# Rust-server

./: .dockerignore  .env  .gitignore  Cargo.toml  LICENCE  README.md  docker-compose.yaml  rest.http
migrations/: 20250120080800_user.down.sql  20250120080800_user.up.sql
src/: main.rs
src/controller/: jwt.rs  mod.rs
src/models/: blog_model.rs  error.rs  error_res.rs  mod.rs  other_model.rs
src/services/: blog_service.rs  user_service.rs
