[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217",features = ["derive"] }
diesel = { version = "2.2.6", features = ["postgres"] }